fixed footer on tablet and smaller screens

--- a/src/assets/styles/css/min/Footer.less
+++ b/src/assets/styles/css/min/Footer.less
@@ -1,7 +1,7 @@
 @import "../definition/colors.less";
 
 .footer {
-  height: 35px;
+  min-height: 35px;
   background: @bloodOrange;
   position: absolute;
   bottom: 0;
@@ -13,5 +13,11 @@
   a {
     color: @white;
     font-size: 14px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .container {
+      width: 100%;
+    }
   }
 }
